[project]
name = "dsp"
version = "0.1.0"
description = "Digital Signal Processing notebooks and utilities"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "nbstripout",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
